OSDOP-119 #2: be able to find appointments by operator (#245)